itc2000 printer labs

--- a/franske-course-information/modules/itc-2000/pages/assignments.adoc
+++ b/franske-course-information/modules/itc-2000/pages/assignments.adoc
@@ -118,6 +118,24 @@ NOTE: *Before you leave today please reset your router to the factory default se
 --
 
 === Printer Labs
+* 8.3.1.3 Lab - Install a Printer in Windows
++
+--
+NOTE: You will install the printer to your desktop computer.
+--
+* 8.4.1.3 Lab - Share a Printer in Windows
++
+--
+NOTE: In this lab use a laptop as the second device (the one which is not directly connected to the printer). Both the laptop and your desktop will need to be connected to the same network so setup your network routers with a connection to both computers. Do not connect the printer directly to the router at this point.
+
+NOTE: Because of a security issue called "Print Nightmare" Microsoft has made some patches to Windows printer sharing which may prevent you from adding a network printer on a the client (Laptop in this case) through the traditional means (such as just double clicking on the shared printer or by searching and installing it as a network printer on the client. Instead you may need to download and install the printer driver on the client computer first (like you would for a local USB printer) and then manually add the shared printer on the client, specifying the driver to use.
+--
+* 8.5.3.2 Lab - Perform Preventive Maintenance on a Laser Printer
++
+--
+NOTE: In this lab you will not actually install any new parts, just find and remove the existing parts on the printer and then re-install them. Also, you should locate the fuser on the printer and find and watch a video showing how to remove and replace it but do not actually do it because on our particular printer model it requires disassembling most of the printer to get to the fuser.
+--
+* xref:lab-networkprinting.adoc[Lab - Setup and Connect to Network Printers]
 
 === Virtualization/Linux Labs
 xref:lab-virtualization.adoc[Virtualization and Linux GUI exploration lab activity instructions]
